.kubernetes/rendered/truth-enrichment/all.yaml
---
# Source: holiday-peak-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truth-enrichment-truth-enrichment
  namespace: holiday-peak-agents
  labels:
    app: truth-enrichment
spec:
  selector:
    app: truth-enrichment
    # When canary is disabled, select all pods
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
---
# Source: holiday-peak-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truth-enrichment-truth-enrichment
  namespace: holiday-peak-agents
  labels:
    app: truth-enrichment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: truth-enrichment
  template:
    metadata:
      labels:
        app: truth-enrichment
        canary: "false"
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: truth-enrichment
      nodeSelector:
        agentpool: agents
      tolerations:
        - effect: NoSchedule
          key: workload
          operator: Equal
          value: agents
      containers:
        - name: truth-enrichment
          image: "holidaypeakhub405devacr.azurecr.io/truth-enrichment@sha256:402003d1ebb928242e996cac3666429169a53d579b7aac2004b7c8faef2b50fb"
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
---
# Source: holiday-peak-service/templates/agc-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truth-enrichment-truth-enrichment-agc
  namespace: holiday-peak-agents
  labels:
    app: truth-enrichment
spec:
  parentRefs:
    - name: "holiday-peak-agc"
      namespace: "holiday-peak-agents"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/truth-enrichment"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: truth-enrichment-truth-enrichment
          port: 80
